--- a/_includes/career-profile.html
+++ b/_includes/career-profile.html
@@ -9,10 +9,8 @@
     </span>
     {{ career-profile.title }}
   </h2>
-안녕하세요
-  <div class="summary">
-    {{ career-profile.summary | markdownify }}
-  </div><!--//summary-->
+안녕하세요. 보험 대출왕 김땅땅입니다.
+
     
 </section><!--//section-->
 {% endif %}
